--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "^11.5",
-        "squizlabs/php_codesniffer": "^3.11"
+        "phpunit/phpunit": "^11",
+        "squizlabs/php_codesniffer": "^3.11",
+        "phpunit/php-code-coverage": "^11.0"
     }
 }
