--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         
     - name: Run PHPUnit tests with code coverage
       run: |
-        vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report --verbose
+        vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report
 
     - name: Upload code coverage report
       uses: actions/upload-artifact@v3
