--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "require-dev": {
         "phpunit/phpunit": "^11",
-        "squizlabs/php_codesniffer": "^3.11",
+        "squizlabs/php_codesniffer": "^3.11"
+    },
+    "require": {
         "phpunit/php-code-coverage": "^11.0"
     }
 }
