--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,13 +37,14 @@ jobs:
         
     - name: Run PHPUnit tests with code coverage
       run: |
-        vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report
+        vendor/bin/phpunit --configuration phpunit.xml 
+      #--coverage-html coverage-report
 
-    - name: Upload code coverage report
-      uses: actions/upload-artifact@v3
-      with:
-        name: coverage-report
-        path: coverage-report/**  # Upload all files inside coverage-report directory
+    # - name: Upload code coverage report
+    #   uses: actions/upload-artifact@v3
+    #   with:
+    #     name: coverage-report
+    #     path: coverage-report/**  
 
   web-deploy:
     name: Deploy
