--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,8 @@ jobs:
         
     - name: Run PHPUnit tests with code coverage
       run: |
-        vendor/bin/phpunit --configuration phpunit.xml 
-      #--coverage-html coverage-report
+        vendor/bin/phpunit --configuration phpunit.xml.dist
+      # vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report
 
     # - name: Upload code coverage report
     #   uses: actions/upload-artifact@v3
