--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,10 +34,19 @@ jobs:
     - name: Fix execute permissions for PHPUnit
       run: |
         chmod +x vendor/bin/phpunit  # Ensure the PHPunit binary is executable
+
+    - name: Run PHPUnit Tests
+      run: vendor/bin/phpunit --coverage-clover=coverage/clover.xml
+
+    - name: Upload Coverage Report
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-report
+        path: coverage/clover.xml
         
-    - name: Run PHPUnit tests with code coverage
-      run: |
-        vendor/bin/phpunit --configuration phpunit.xml.dist
+    # - name: Run PHPUnit tests with code coverage
+    #   run: |
+    #     vendor/bin/phpunit --configuration phpunit.xml.dist
       # vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report
 
     # - name: Upload code coverage report
@@ -46,22 +55,22 @@ jobs:
     #     name: coverage-report
     #     path: coverage-report/**  
 
-  web-deploy:
-    name: Deploy
-    needs: web-build
-    runs-on: ubuntu-latest
+  # web-deploy:
+  #   name: Deploy
+  #   needs: web-build
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - name: Get latest code
-      uses: actions/checkout@v2
+  #   steps:
+  #   - name: Get latest code
+  #     uses: actions/checkout@v2
 
-    - name: Sync files to server
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-      with:
-        server: ${{ secrets.ftp_server }}
-        username: ${{ secrets.ftp_username }}
-        password: ${{ secrets.ftp_password }}
-        server_dir: /public_html/demo_project_cicd/
-        ftp_options: |
-          --dry-run   # Run a dry-run to test without actually uploading anything.
-          --verbose   # Log more detailed information for debugging.
+  #   - name: Sync files to server
+  #     uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+  #     with:
+  #       server: ${{ secrets.ftp_server }}
+  #       username: ${{ secrets.ftp_username }}
+  #       password: ${{ secrets.ftp_password }}
+  #       server_dir: /public_html/demo_project_cicd/
+  #       ftp_options: |
+  #         --dry-run   # Run a dry-run to test without actually uploading anything.
+  #         --verbose   # Log more detailed information for debugging.
