--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up PHP with Xdebug
+    - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.2'
-        extensions: mbstring, intl, bcmath, xdebug  # Install xdebug for coverage
+        extensions: xdebug
+        coverage: xdebug
 
     - name: Verify Xdebug Installation
       run: |
