--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,13 @@
 {
+    "autoload": {
+      "psr-4": {
+        "App\\": "app/"
+      }
+    },
     "require-dev": {
         "phpunit/phpunit": "^11.5",
         "squizlabs/php_codesniffer": "^3.11",
         "phpunit/php-code-coverage": "^11.0"
     }
-}
+  }
+  
