--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,8 @@ jobs:
 
     - name: Run PHPUnit tests
       run: |
-        vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report
+      # vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report
+        vendor/bin/phpunit --configuration phpunit.xml
 
     - name: Upload code coverage report
       uses: actions/upload-artifact@v3
