--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,8 @@ jobs:
     - name: Upload code coverage report
       uses: actions/upload-artifact@v3
       with:
-        name: coverage-report
-        path: coverage-report/
+        name: clover
+        path: coverage/
       
     # - name: Run PHPUnit tests with code coverage
     #   run: |
