--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,18 +42,9 @@ jobs:
     - name: Create coverage directory
       run: mkdir -p coverage
 
-    # - name: Run PHPUnit tests
-    #   run: |
-    #     vendor/bin/phpunit --configuration phpunit.xml
-
-    - name: PHPUnit Tests
-      uses: php-actions/phpunit@v3
-      env:
-        XDEBUG_MODE: coverage
-      with:
-        configuration: phpunit.xml.dist
-        php_extensions: gettext, xdebug
-        args: --coverage-clover ./coverage.xml --test-suffix Test.php --test-suffix .phpt
+    - name: Run PHPUnit tests
+      run: |
+        vendor/bin/phpunit --configuration phpunit.xml
 
     - name: Upload code coverage report
       uses: actions/upload-artifact@v3
