--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         php-version: '8.2'
         extensions: mbstring, intl, bcmath, xdebug
-        coverage: xdebug 
+        coverage: xdebug  # This enables Xdebug for code coverage
 
     - name: Install Composer globally
       run: curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -40,11 +40,11 @@ jobs:
         chmod +x vendor/bin/phpunit  
 
     - name: Create coverage directory
-      run: mkdir -p coverage-report
+      run: mkdir -p coverage
 
-    - name: Run PHPUnit tests
+    - name: Run PHPUnit tests with coverage
       run: |
-        vendor/bin/phpunit --configuration phpunit.xml
+        vendor/bin/phpunit --configuration phpunit.xml --coverage-clover coverage/coverage-report.xml
 
     - name: Upload code coverage report
       uses: actions/upload-artifact@v3
