--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,8 @@
       }
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.5",
         "squizlabs/php_codesniffer": "^3.11",
-        "phpunit/php-code-coverage": "^11.0"
+        "phpunit/php-code-coverage": "^11.0",
+        "phpunit/phpunit": "^11.5"
     }
   }
-  
