--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
 
     - name: Run PHPUnit tests with coverage
       run: |
-        vendor/bin/phpunit --configuration phpunit.xml
+          ./vendor/bin/phpunit --coverage-html coverage-report
 
     - name: Upload code coverage report
       uses: actions/upload-artifact@v3
@@ -64,22 +64,22 @@ jobs:
     #     name: coverage-report
     #     path: coverage-report/**  
 
-  web-deploy:
-    name: Deploy
-    needs: web-build
-    runs-on: ubuntu-latest
+  # web-deploy:
+  #   name: Deploy
+  #   needs: web-build
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - name: Get latest code
-      uses: actions/checkout@v2
+  #   steps:
+  #   - name: Get latest code
+  #     uses: actions/checkout@v2
 
-    - name: Sync files to server
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-      with:
-        server: ${{ secrets.ftp_server }}
-        username: ${{ secrets.ftp_username }}
-        password: ${{ secrets.ftp_password }}
-        server_dir: /public_html/demo_project_cicd/
-        ftp_options: |
-          --dry-run   # Run a dry-run to test without actually uploading anything.
-          --verbose   # Log more detailed information for debugging.
+  #   - name: Sync files to server
+  #     uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+  #     with:
+  #       server: ${{ secrets.ftp_server }}
+  #       username: ${{ secrets.ftp_username }}
+  #       password: ${{ secrets.ftp_password }}
+  #       server_dir: /public_html/demo_project_cicd/
+  #       ftp_options: |
+  #         --dry-run   # Run a dry-run to test without actually uploading anything.
+  #         --verbose   # Log more detailed information for debugging.
