--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         php-version: '8.2'
         extensions: mbstring, intl, bcmath, xdebug
-        coverage: xdebug  # This enables Xdebug for code coverage
+        coverage: xdebug 
 
     - name: Install Composer globally
       run: curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -40,17 +40,19 @@ jobs:
         chmod +x vendor/bin/phpunit  
 
     - name: Create coverage directory
-      run: mkdir -p coverage
+      run: mkdir -p coverage-report
 
     - name: Run PHPUnit tests with coverage
       run: |
-          vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report
+        echo "PHP Version: $(php -v)"
+        echo "PHPUnit Version: $(./vendor/bin/phpunit --version)"
+        vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report
 
     - name: Upload code coverage report
       uses: actions/upload-artifact@v3
       with:
         name: clover-coverage-report
-        path: coverage/coverage-report.xml
+        path: coverage-report/clover.xml
       
     # - name: Run PHPUnit tests with code coverage
     #   run: |
