--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
 
     - name: Run PHPUnit tests with coverage
       run: |
-        vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report --debug
+        vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report
 
     - name: Upload code coverage report
       uses: actions/upload-artifact@v3
