--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
       run: vendor/bin/phpunit --configuration phpunit.xml --list-tests
 
     - name: Run PHPUnit tests with coverage
-      run: vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report
+      run: vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report --stop-on-failure
 
     - name: Upload code coverage report
       uses: actions/upload-artifact@v3
