--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,7 @@ jobs:
       run: vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report --stop-on-failure
 
     - name: Upload code coverage report
+      if: success()
       uses: actions/upload-artifact@v3
       with:
         name: clover-coverage-report
