--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,8 @@ jobs:
     - name: Validate PHP syntax for all PHP files
       run: |
         echo "Checking PHP syntax for all PHP files..."
-        find . -type f -name "*.php" -exec php -l {} \; || { echo "Syntax error detected in one of the PHP files. Stopping execution."; exit 1; }
+        find . -type f -name "*.php" -exec php -l {} \; 
+      continue-on-error: false
 
     - name: List tests
       run: vendor/bin/phpunit --configuration phpunit.xml --list-tests
