--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,46 +51,40 @@ jobs:
     - name: List tests
       run: vendor/bin/phpunit --configuration phpunit.xml --list-tests
 
-    - name: Run PHPUnit tests with coverage
+    - name: Run PHPUnit tests with code coverage
       run: |
         vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report --stop-on-failure
       continue-on-error: false
 
+    # - name: Run PHPUnit tests with code coverage
+    #   run: |
+    #     vendor/bin/phpunit --configuration phpunit.xml.dist
+    #     vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report
+    #     vendor/bin/phpunit --configuration phpunit.xml --coverage-clover coverage-report/coverage-report.xml
+    
     - name: Upload code coverage report
       if: success()
       uses: actions/upload-artifact@v3
       with:
         name: coverage-report
         path: coverage-report/**
-      
-    # - name: Run PHPUnit tests with code coverage
-    #   run: |
-    #     vendor/bin/phpunit --configuration phpunit.xml.dist
-    # vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report
-    #  vendor/bin/phpunit --configuration phpunit.xml --coverage-clover coverage-report/coverage-report.xml
 
-    # - name: Upload code coverage report
-    #   uses: actions/upload-artifact@v3
-    #   with:
-    #     name: coverage-report
-    #     path: coverage-report/**  
+  web-deploy:
+    name: Deploy
+    needs: web-build
+    runs-on: ubuntu-latest
 
-  # web-deploy:
-  #   name: Deploy
-  #   needs: web-build
-  #   runs-on: ubuntu-latest
+    steps:
+    - name: Get latest code
+      uses: actions/checkout@v2
 
-  #   steps:
-  #   - name: Get latest code
-  #     uses: actions/checkout@v2
-
-  #   - name: Sync files to server
-  #     uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-  #     with:
-  #       server: ${{ secrets.ftp_server }}
-  #       username: ${{ secrets.ftp_username }}
-  #       password: ${{ secrets.ftp_password }}
-  #       server_dir: /public_html/demo_project_cicd/
-  #       ftp_options: |
-  #         --dry-run   # Run a dry-run to test without actually uploading anything.
-  #         --verbose   # Log more detailed information for debugging.
+    - name: Sync files to server
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+      with:
+        server: ${{ secrets.ftp_server }}
+        username: ${{ secrets.ftp_username }}
+        password: ${{ secrets.ftp_password }}
+        server_dir: /public_html/demo_project_cicd/
+        ftp_options: |
+          --dry-run   # Run a dry-run to test without actually uploading anything.
+          --verbose   # Log more detailed information for debugging.
