--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         php-version: '8.2'
         extensions: mbstring, intl, bcmath, xdebug
-        coverage: xdebug 
+        coverage: xdebug
 
     - name: Install Composer globally
       run: curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -51,17 +51,11 @@ jobs:
     - name: List tests
       run: vendor/bin/phpunit --configuration phpunit.xml --list-tests
 
-    - name: Run PHPUnit tests with code coverage
+    - name: Run PHPUnit tests with code coverage report
       run: |
         vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report --stop-on-failure
       continue-on-error: false
 
-    # - name: Run PHPUnit tests with code coverage
-    #   run: |
-    #     vendor/bin/phpunit --configuration phpunit.xml.dist
-    #     vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report
-    #     vendor/bin/phpunit --configuration phpunit.xml --coverage-clover coverage-report/coverage-report.xml
-    
     - name: Upload code coverage report
       if: success()
       uses: actions/upload-artifact@v3
