--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,6 @@ jobs:
       run: |
         chmod +x vendor/bin/phpunit  
 
-    - name: Create coverage directory
-      run: mkdir -p coverage-report
-
     - name: Validate PHP syntax for all PHP files
       run: |
         echo "Checking PHP syntax for all PHP files..."
@@ -53,6 +50,7 @@ jobs:
 
     - name: Run PHPUnit tests with code coverage report
       run: |
+        mkdir -p coverage-report
         vendor/bin/phpunit --configuration phpunit.xml --coverage-clover coverage-report/coverage-report.xml --stop-on-failure
         # vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report --stop-on-failure
       continue-on-error: false
@@ -64,22 +62,22 @@ jobs:
         name: coverage-report
         path: coverage-report/**
 
-  web-deploy:
-    name: Deploy
-    needs: web-build
-    runs-on: ubuntu-latest
+  # web-deploy:
+  #   name: Deploy
+  #   needs: web-build
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - name: Get latest code
-      uses: actions/checkout@v2
+  #   steps:
+  #   - name: Get latest code
+  #     uses: actions/checkout@v2
 
-    - name: Sync files to server
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-      with:
-        server: ${{ secrets.ftp_server }}
-        username: ${{ secrets.ftp_username }}
-        password: ${{ secrets.ftp_password }}
-        server_dir: /public_html/demo_project_cicd/
-        ftp_options: |
-          --dry-run   # Run a dry-run to test without actually uploading anything.
-          --verbose   # Log more detailed information for debugging.
+  #   - name: Sync files to server
+  #     uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+  #     with:
+  #       server: ${{ secrets.ftp_server }}
+  #       username: ${{ secrets.ftp_username }}
+  #       password: ${{ secrets.ftp_password }}
+  #       server_dir: /public_html/demo_project_cicd/
+  #       ftp_options: |
+  #         --dry-run   # Run a dry-run to test without actually uploading anything.
+  #         --verbose   # Log more detailed information for debugging.
