--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,8 +50,7 @@ jobs:
     - name: Run PHPUnit tests with code coverage report
       run: |
         mkdir -p coverage-report
-        vendor/bin/phpunit --configuration phpunit.xml --coverage-clover coverage-report/coverage-report.xml --stop-on-failure
-        # vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report --stop-on-failure
+        vendor/bin/phpunit --configuration phpunit.xml --coverage-clover coverage-report/coverage-report.xml --stop-on-failure || exit 1
 
     - name: Upload code coverage report
       if: success()
