--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         vendor/bin/phpunit --configuration phpunit.xml --coverage-clover coverage-report/coverage-report.xml --stop-on-failure || exit 1
 
     - name: Upload code coverage report
-      if: success()
+      # if: success()
       uses: actions/upload-artifact@v3
       with:
         name: coverage-report
