--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,10 +39,10 @@ jobs:
       run: |
         chmod +x vendor/bin/phpunit  
 
+    # Check syntax for each PHP file and stop on the first error
     - name: Validate PHP syntax for all PHP files
       run: |
         echo "Checking PHP syntax for all PHP files..."
-        # Check syntax for each PHP file and stop on the first error
         for file in $(find ./app -type f -name "*.php"); do
           php -l $file
           if [ $? -ne 0 ]; then
@@ -60,7 +60,7 @@ jobs:
         vendor/bin/phpunit --configuration phpunit.xml --coverage-clover coverage-report/coverage-report.xml --stop-on-failure || exit 1
 
     - name: Upload code coverage report
-      # if: success()
+      if: success()
       uses: actions/upload-artifact@v3
       with:
         name: coverage-report
