--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,7 @@ jobs:
       run: |
         mkdir -p coverage-report
         vendor/bin/phpunit --configuration phpunit.xml --coverage-clover coverage-report/coverage-report.xml --stop-on-failure || exit 1
+        # vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report/html --stop-on-failure || exit 1
 
     - name: Upload code coverage report
       if: success()
