--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,10 @@ jobs:
         vendor/bin/phpunit --configuration phpunit.xml --coverage-clover coverage-report/coverage-report.xml --stop-on-failure || exit 1
         # vendor/bin/phpunit --configuration phpunit.xml --coverage-html coverage-report/html --stop-on-failure || exit 1
 
+    - name: Generate and Download Coverage Report
+      run: |
+        php generate_coverage_report.php
+
     - name: Upload code coverage report
       if: success()
       uses: actions/upload-artifact@v3
