--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,13 @@ jobs:
 
     services:
       mysql:
-        image: mysql:8.0.28
+        image: mysql:8.0
         env:
-          MYSQL_ROOT_PASSWORD: ""
+          MYSQL_ROOT_PASSWORD: ""  
           MYSQL_DATABASE: demo_project_cicd
         ports:
           - 3306:3306
-        options: --health-cmd='mysqladmin ping --silent' --health-interval=5s --health-timeout=3s --health-retries=3
+        options: --health-cmd="mysqladmin ping -h localhost --silent" --health-interval=5s --health-timeout=3s --health-retries=3
         
     steps:
     - name: Checkout repository
