--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,11 +58,18 @@ jobs:
     - name: List tests
       run: vendor/bin/phpunit --configuration phpunit.xml --list-tests
 
-    - name: Wait for MySQL to be ready
+    - name: Wait for MySQL to be ready (with timeout)
       run: |
-        while ! mysqladmin ping -h"127.0.0.1" --silent; do
+        MAX_TRIES=60
+        COUNT=0
+        while ! mysqladmin ping -h"${{ secrets.DB_HOST }}" -u"${{ secrets.DB_USER }}" -p"${{ secrets.DB_PASSWORD }}" --silent; do
+          if [ $COUNT -ge $MAX_TRIES ]; then
+            echo "MySQL did not become ready in time, exiting."
+            exit 1
+          fi
           echo "Waiting for MySQL to be ready..."
           sleep 3
+          COUNT=$((COUNT+1))
         done
         echo "MySQL is ready!"
 
